# fintools

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  format.sh
include/: CMakeLists.txt
include/ft/hdf5/: Datatype.hpp  Exception.hpp  File.hpp  Hdf5.hpp
include/ft/util/: Defs.hpp  UniqueHandle.hpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/hdf5/: CMakeLists.txt  Datatype.cpp  Exception.cpp  File.cpp  Hdf5.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/hdf5/: CMakeLists.txt  Datatype.cpp  Exception.cpp  File.cpp  Hdf5.cpp  Main.cpp
test/unit/util/: CMakeLists.txt  Main.cpp  UniqueHandle.cpp
